--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -57,9 +57,10 @@
         <img src="{% static 'image/image6 1.png' %}" class="img">
         {% comment %} <h1>DISHA</h1> {% endcomment %}
         <nav>
-            <a href="{% url 'dashboard:bloglist' %}">Blog</a>
+            <a href="{% url 'dashboard:bloglist' %}">Blogs</a>
             <a href="{% url 'dashboard:patient' %}">Patient Details</a>
             <a href="{% url 'dashboard:appoinments' %}">Appointments</a>
+            <a href="{% url 'dashboard:review' %}">Reviews</a>
             <a href="{% url 'dashboard:logout' %}">Logout</a>
         </nav>
     </header>
