--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -33,42 +33,47 @@
 
     <!-- spotlight section starts here -->
    <section>
-    <div>
-        <div class="ipad_min:w-full mobile:w-full">
-            <a href="#"><img class="w-full ipad_min:hidden mobile:block" src="{% static 'image/Frame 34547.png' %}" alt=""></a>
-            <a href="#"><img class="hidden ipad_min:block mobile:hidden" src="{% static 'image/Frame 34547(12).svg' %}" alt=""></a>
-        </div>
-        <div class="absolute top-[20%] p-32 ipad_min:p-8 ipad_min:top-[35%] mobile:p-7 mobile:top-[15%] phone_max:top-[15%] phone_max:p-7 ipad:p-7 ipad:top-28">
-            <h5 class="font-montserrat text-base my-8 text-white ipad_min:my-3 mobile:my-3">Featured</h5>
-            <h1 class="font-montserrat text-4xl font-semibold text-white ipad_min:text-sm mobile:text-sm phone_max:text-xl">What is INNER CHILD, and the what is the </h1>
-            <h1 class="font-montserrat text-4xl font-semibold text-white ipad_min:text-sm mobile:text-sm phone_max:text-xl ">role of INNER CHILD in us presently?</h1>
-            <div class="flex justify-between gap-20 my-8 ">
-                <p class="font-montserrat text-white ipad_min:hidden mobile:hidden phone_max:hidden ipad:hidden">The concept of the inner child has gained popularity in recent years, especially in the field of psychology. The inner child refers to the emotional, sensitive, and vulnerable part of ourselves that we carry with us from childhood.</p>
-                <a href="#"><img src="{% static 'image/Arrow.svg' %}" alt=""></a>
+        <div>
+            {% if featured_blog %}
+            <div class="ipad_min:w-full mobile:w-full">
+                <a href="#"><img class="w-full ipad_min:hidden mobile:block" src="{{ featured_blog.image.url }}" alt=""></a>
+                <a href="#"><img class="hidden ipad_min:block mobile:hidden" src="{{ featured_blog.image.url }}" alt=""></a>
             </div>
+            <div class="absolute top-[20%] p-32 ipad_min:p-8 ipad_min:top-[35%] mobile:p-7 mobile:top-[15%] phone_max:top-[15%] phone_max:p-7 ipad:p-7 ipad:top-28">
+                <h5 class="font-montserrat text-base my-8 text-white ipad_min:my-3 mobile:my-3">Featured</h5>
+                <h1 class="font-montserrat text-4xl font-semibold text-white ipad_min:text-sm mobile:text-sm phone_max:text-xl">{{ featured_blog.title }}</h1>
+                <div class="flex justify-between gap-20 my-8 ">
+                    <p class="font-montserrat text-white ipad_min:hidden mobile:hidden phone_max:hidden ipad:hidden">{{ featured_blog.content|slice:":255" | safe }}</p>
+                    <a href="{% url 'main:single' pk=featured_blog.pk %}">
+                        <img src="{% static 'image/Arrow.svg' %}" alt="">
+                    </a>
+                </div>
+            </div>
+            {% else %}
+                <p>No featured blog available.</p>
+            {% endif %}
         </div>
-    </div>
    </section>
    <!-- spotlight section ends here -->
 
     <!-- grid section starts here -->
    <section>
-    <h1 class="my-8 font-artifika text-4xl">Recent blog posts</h1>
-    <div class="flex flex-wrap gap-16 ipad_min:grid mobile:grid">
-        {% for blog in blogs %}
-        <div class=" w-[30%] font-montserrat ipad_min:w-full mobile:w-full phone_max:w-full ipad:w-[45%]">
-            <a href="{% url 'main:single' blog.pk %}"><img class="mb-4 transition-transform transform hover:scale-105" src="{{ blog.image.url }}" alt=""></a>
-            <a href="{% url 'main:single' blog.pk %}"><h1 class="font-semibold ">{{ blog.title }}</h1></a>
-            <a href="{% url 'main:single' blog.pk %}"><p class="my-4">{{blog.content|slice:":255" | safe}}</p></a>
-            <a href="{% url 'main:single' blog.pk %}"><h2>{{ blog.date }}</h2></a>
+        <h1 class="my-8 font-artifika text-4xl">Recent blog posts</h1>
+        <div class="flex flex-wrap gap-16 ipad_min:grid mobile:grid">
+            {% for blog in blogs %}
+            <div class=" w-[30%] font-montserrat ipad_min:w-full mobile:w-full phone_max:w-full ipad:w-[45%]">
+                <a href="{% url 'main:single' blog.pk %}"><img class="mb-4 transition-transform transform hover:scale-105" src="{{ blog.image.url }}" alt=""></a>
+                <a href="{% url 'main:single' blog.pk %}"><h1 class="font-semibold ">{{ blog.title }}</h1></a>
+                <a href="{% url 'main:single' blog.pk %}"><p class="my-4">{{blog.content|slice:":255" | safe}}</p></a>
+                <a href="{% url 'main:single' blog.pk %}"><h2>{{ blog.date }}</h2></a>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-    <div class="my-12 flex justify-center">
-        <button class="border border-black w-[25rem] h-[3rem] read">
-            <a href="#">load more ...</a>
-        </button>
-    </div>
+        <div class="my-12 flex justify-center">
+            <button class="border border-black w-[25rem] h-[3rem] read">
+                <a href="#">load more ...</a>
+            </button>
+        </div>
    </section>
    <!-- grid ends here -->
 
