--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -73,7 +73,7 @@
         padding: 2rem 2rem;
         box-sizing: border-box;
         z-index: 1000;
-        background-color: #ff9c80; /* Add your desired background color */
+        background-color: #fdbdab; /* Add your desired background color */
         color:black; /* Add your desired text color */
         text-align: center;
         display: none; /* Hide the container by default */
