--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -5,10 +5,36 @@
 
 {% load static %}
 <style>
-    .button1:hover{
+    .button1:hover {
         background: #fcb9a7;
     }
+
+    .image-container {
+        position: relative;
+        display: block;
+    }
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 2.5rem;
+        background-color: rgba(0, 0, 0, 0.5); /* Adjust the last value for the desired level of transparency */
+        opacity: 0; /* Initially set to fully transparent */
+        transition: opacity 0.3s ease; /* Add a smooth transition effect */
+    }
+
+    .hover-transform {
+        transition: transform 0.3s ease; /* Add a smooth transition effect */
+    }
+
+    .hover-transform:hover {
+        transform: translateX(-10px); /* Adjust the value as needed for the desired leftward transformation */
+    }
 </style>
+
 
     
 
@@ -40,18 +66,22 @@
         <div>
             {% if featured_blog %}
             <div class="ipad_min:w-full mobile:w-full">
-                <a href="#"><img class="w-full ipad_min:hidden mobile:block" src="{{ featured_blog.image.url }}" alt=""></a>
-                <a href="#"><img class="hidden ipad_min:block mobile:hidden" src="{{ featured_blog.image.url }}" alt=""></a>
+                <a href="#" class="image-container">
+                    <img class="w-full ipad_min:hidden mobile:block " style="height:35rem;width:100%;" src="{{ featured_blog.image.url }}" alt="">
+                    <img class="hidden ipad_min:block mobile:hidden" src="{{ featured_blog.image.url }}" alt="">
+                    <div class="overlay"></div>
+                </a>
             </div>
             <div class="absolute top-[20%] p-32 ipad_min:p-8 ipad_min:top-[35%] mobile:p-7 mobile:top-[15%] phone_max:top-[15%] phone_max:p-7 ipad:p-7 ipad:top-28">
                 <h5 class="font-montserrat text-base my-8 text-white ipad_min:my-3 mobile:my-3">Featured</h5>
                 <h1 class="font-montserrat text-4xl font-semibold text-white ipad_min:text-sm mobile:text-sm phone_max:text-xl">{{ featured_blog.title }}</h1>
-                <div class="flex justify-between gap-20 my-8 ">
-                    <p class="font-montserrat text-white ipad_min:hidden mobile:hidden phone_max:hidden ipad:hidden">{{ featured_blog.content|slice:":255" | safe }}</p>
+                <div class="flex justify-between gap-20 my-8 hover-transform">
+                    <p class="font-montserrat ipad_min:hidden mobile:hidden phone_max:hidden ipad:hidden" style="color:white;">{{ featured_blog.content|slice:":255" | safe }}</p>
                     <a href="{% url 'main:single' pk=featured_blog.pk %}">
                         <img src="{% static 'image/Arrow.svg' %}" alt="">
                     </a>
                 </div>
+                
             </div>
             {% else %}
                 <p>No featured blog available.</p>
