--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -71,7 +71,7 @@
             <div class="text-center ipad_min:text-left mobile:text-left animate__animated animate__fadeInUp">
                 <h1 class="font-montasorrat text-5xl my-6 ipad_min:text-xl ipad_min:my-0 mobile:text-xl mobile:my-0 phone_max:text-4xl">Find <span class="font-artifika">Peace of Mind</span> with</h1>
                 <h1 class="font-artifika text-5xl ipad_min:text-xl mobile:text-xl phone_max:text-4xl "> Professional Counselling <span class="font-montasorrat">Services</span></h1>
-                <p class="text-lg text-center my-6 ipad_min:text-base ipad_min:text-start mobile:text-base mobile:text-start">With over 30 years of experience in teaching and counselling, Rema Devi can help you overcome your challenges, achieve your goals, and live your best life.</p>
+                <p class="text-lg text-center my-6 ipad_min:text-base ipad_min:text-start mobile:text-base mobile:text-start">With more than 30 years of Teaching and Counselling, the Counsellor can assist you to solve problems , to overcome challenges and to  set and achieve goals to lead a happy life….</p>
             </div>
             <div class="ipad_min:hidden mobile:hidden animate__animated animate__fadeInDown"><img src="{% static 'image/Union-1.svg' %}" alt=""></div>
         </div>
@@ -104,16 +104,16 @@
                 <p class="my-3">Marriage made easy with our counselling service.</p>
             </div>
             <div class="w-[30%] bg-baseprimary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-primary transition-transform transform hover:scale-105">
-                <h1 class="font-semibold">Family Counselling</h1>
+                <h1 class="font-semibold">Family Counselling [Therapy-for ALL ages]</h1>
                 <p class="my-3">Child & adolescent growth with our counselling service.</p>
             </div>
             
             <div class=" w-[30%] bg-primary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-baseprimary transition-transform transform hover:scale-105 ">
-                <h1 class="font-semibold">Child & Adolescent Counselling</h1>
+                <h1 class="font-semibold">Children and Adolescents [Teenagers] Counselling</h1>
                 <p class="my-3">School success with our counselling service.</p>
             </div>
             <div class=" w-[23%] bg-baseprimary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-primary transition-transform transform hover:scale-105  ">
-                <h1 class="font-semibold">School Counselling</h1>
+                <h1 class="font-semibold">School Counselling Programs</h1>
                 <p class="my-3">School success with our counselling service.</p>
             </div>
             <div class=" w-[23%] bg-primary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-baseprimary transition-transform transform hover:scale-105 ">
@@ -129,7 +129,7 @@
                 <p class="my-3">Boost your motivation with our motivational sessions</p>
             </div>
             <div class=" w-[30%] bg-baseprimary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-primary transition-transform transform hover:scale-105 ">
-                <h1 class="font-semibold">Teacher Development Programmes</h1>
+                <h1 class="font-semibold">Teacher Development/Awareness Programs</h1>
                 <p class="my-3">Teach better with our programmes</p>
             </div>
             <div class=" w-[30%] bg-primary items-start h-40 p-8 rounded-xl font-montasorrat hover:bg-baseprimary transition-transform transform hover:scale-105 ">
@@ -148,7 +148,7 @@
     <section>
         <div class="flex gap-14 my-24 ipad_min:grid ipad_min:my-14 mobile:grid mobile:my-14 phone_max:grid phone_max:my-7 ipad:grid">
             <div>
-                <div class="ipad_min:w-full mobile:w-full ipad:flex ipad:justify-center"><img src="{% static 'image/Rectangle 1549(1).png' %}" alt=""></div>
+                <div class="ipad_min:w-full mobile:w-full ipad:flex ipad:justify-center"><img src="{% static 'image/pp03 (1).jpg' %}" alt="" style="border-radius:3rem 0;"></div>
                 <div class="ipad_min:hidden mobile:hidden">
                     <button class="bor w-[25rem] h-[3rem] my-6 ipad_min:w-full hover:bg-primary hover:border-none ipad:hidden">
                         <a href="{% url 'main:about' %}">READ MORE</a>
@@ -158,7 +158,7 @@
             <div>
                 <h1 class="font-artifika text-4xl ipad_min:text-xl mobile:text-xl">Rema Devi A</h1>
                 <h2 class="font-montserrat text-xl my-1 text-gray-600 ipad_min:text-lg mobile:text-lg">Counselling Psychologist</h2>
-                <p class="font-montserrat text-lg my-8 ipad_min:text-sm mobile:text-sm">Hello, and welcome to my counselling centre. My name is Rema Devi, and I am a counselling psychologist with a Ph.D. degree in Counselling Psychology. I have over 30  years of experience in teaching and counselling, and I am passionate about helping  people achieve their personal and professional goals.</p>
+                <p class="font-montserrat text-lg my-8 ipad_min:text-sm mobile:text-sm">Hello,<br><br>Welcome to New Disha Counselling Centre. With many years of teaching and Counselling in and Outside KERALA, I am there to help people to achieve their personal and professional goals…</p>
                 <p class="font-montserrat text-lg ipad_min:hidden mobile:hidden ">I started my counselling centre at home in 2014, and since then I have been providing professional and compassionate counselling services for individuals, couples, families, and groups. I offer a range of counselling services, including pre-marital counselling, family counselling/therapy, child & adolescent counselling, school counselling, group counselling, awareness programs, motivational sessions, career guidance, teacher  development programmes, and grief therapy.</p>
                 <div class="flex gap-12 my-8">
                     <div class="flex items-center gap-4">
@@ -171,7 +171,7 @@
                     <div class="flex items-center gap-4">
                         <div class="bg-light p-3 rounded-xl ipad_min:hidden mobile:hidden"><img src="{% static 'image/Happy face.svg' %}" alt=""></div>
                         <div>
-                            <h1 class="text-4xl font-semibold font-montserrat ipad_min:text-lg mobile:text-lg">175+</h1>
+                            <h1 class="text-4xl font-semibold font-montserrat ipad_min:text-lg mobile:text-lg">4000+</h1>
                             <p class="font-montserrat text-lg ipad_min:text-base mobile:text-base">Happy clients</p>
                         </div>
                     </div>
